<!--
  ~ /**
  ~  * Created by Harapan Pardamean on 9/11/20 9:38 PM
  ~  * Copyright (c) 2020 . All rights reserved.
  ~  * Last modified 9/11/20 3:49 AM
  ~  */
  -->

<resources>
    <string name="app_name">Dieng</string>
    <string name="slogan">Tanah Para Dewa</string>
    <string name="deskripsi_vector_gunung">Dieng, Tanah Para Dewa</string>
    <string name="paket_wisata">Paket Wisata</string>
    <string name="menu">Menu</string>
    <string name="sejarahContentView">
        Pada awal abad masehi, terjadilah
        sebuah proses migrasi besar-besaran penduduk Kalinga ke
        berbagai penjuru asia, salah satunya ke pulau jawa.
    </string>
    <string name="sejarah">Sejarah</string>
    <string name="kawah_candradimuka">Kawah Candradimuka</string>
    <string name="objek_wisata_title">Objek Wisata</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>