<?xml version="1.0" encoding="utf-8"?><!--
  ~ /**
  ~  * Created by Harapan Pardamean on 9/11/20 3:49 AM
  ~  * Copyright (c) 2020 . All rights reserved.
  ~  * Last modified 9/11/20 12:25 AM
  ~  */
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/gunung"
        android:layout_width="308dp"
        android:layout_height="212dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/deskripsi_vector_gunung"
        android:scaleType="fitXY"
        android:src="@drawable/ic_gunung" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/dieng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/julee"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="64sp" />

        <TextView
            android:id="@+id/slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_name"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/slogan"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>