<?xml version="1.0" encoding="utf-8"?><!--
  ~ /**
  ~  * Created by Harapan Pardamean on 9/11/20 9:38 PM
  ~  * Copyright (c) 2020 . All rights reserved.
  ~  * Last modified 9/11/20 3:49 AM
  ~  */
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <FrameLayout
        android:id="@+id/frame1"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:animateLayoutChanges="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/bg_gunung_dieng"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/slogan"
            android:scaleType="fitXY"
            android:src="@drawable/background" />

        <LinearLayout
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="0dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dieng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/julee"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="64sp" />

            <TextView
                android:id="@+id/slogan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/slogan"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_paket_wisata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:fontFamily="@font/roboto_bold"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:text="@string/paket_wisata"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="30dp" />
    </FrameLayout>

    <TextView
        android:id="@+id/menu_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/menu"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:drawableBottomCompat="@drawable/ic_baseline_keyboard_arrow_down_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame1"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>